# mantra

./: .gitignore  ARCHITECTURE.md  ISSUES.md  README.md  go.mod  go.sum  main.go  mantra.toml.example  plan.md
rust/: Cargo.toml  mantra.toml
rust/docs/: logging.md  plan.md  symbol-inspector-design.md  type-resolver-design.md
rust/docs/plan/: crdt-editor-textedit-integration.md
rust/examples/: demo_inspect.rs  mantra.toml  raw_response_test.json  sample.go  simple_test.go  test_checksum.rs  test_editor.rs  test_generator.rs  test_llm_response.rs  test_lsp_client.rs  test_lsp_compare.rs  test_lsp_hover_simple.rs  test_lsp_methods.rs  test_real_llm.rs  test_workspace.rs
rust/examples/go/: minimal.go  simple.go
rust/examples/test_data/: simple.go
rust/src/: incremental_editor.rs  lib.rs  main.rs
rust/src/config/: error.rs  mod.rs
rust/src/core/: error.rs  metrics.rs  mod.rs  types.rs
rust/src/document/: manager.rs  mod.rs
rust/src/editor/: crdt.rs  edit.rs  mod.rs  text.rs  transaction.rs
rust/src/generation/: event.rs  generator.rs  mod.rs  prompt.rs  target.rs  task.rs
rust/src/generator/: async_generator.rs  document_manager.rs  edit_event.rs  mod.rs  target_generator.rs
rust/src/language/: go.rs  mod.rs
rust/src/llm/: client.rs  error.rs  mod.rs  response_test.rs  types.rs
rust/src/lsp/: client.rs  connection.rs  crdt_adapter.rs  error.rs  formatting.rs  mod.rs  notification.rs  rpc.rs  transport.rs  types.rs
rust/src/parser/: checksum.rs  editor.rs  error.rs  mod.rs  target.rs  target_map.rs  test_lsp.go
rust/src/tools/: inspect.rs  mod.rs
rust/src/workspace/: actor.rs  document.rs  document_service.rs  mod.rs  (+7 more)
rust/tests/: document_manager.rs  edit_event_test.rs  inspect_tool.rs  integration_test.rs  lsp_formatting_test.rs  lsp_integration.rs  workspace_actix_test.rs
(+125 files in other folders)
