[package]
name = "mantra"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

# Parsing
tree-sitter = "0.22"
tree-sitter-go = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
regex = "1"
hashbrown = "0.14"
walkdir = "2"
jsonrpsee = { version = "0.24", features = ["client", "server", "macros"] }

# UI (for later)
# ratatui = "0.26"
# crossterm = "0.27"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
