[package]
name = "mantra"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

# Parsing
tree-sitter = "0.25"
tree-sitter-go = "0.23"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
regex = "1"
hashbrown = "0.15"
rustc-hash = "2"
walkdir = "2"
jsonrpsee = { version = "0.26", features = ["client", "server", "macros"] }
lsp-types = "0.97"

# Actor framework
actix = "0.13"

# UI (for later)
# ratatui = "0.26"
# crossterm = "0.27"

# Temporary files
tempfile = "3"
cola = "0.5.1"
rand = "0.9.2"

[dev-dependencies]
env_logger = "0.11"
